# loudspeaker

./: Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac  loudspeaker.hh  lsclient.cc  lsserver.c  lsserver.cc  outfile.raw  pacat-simple.c  parec-simple.c  parec-simple.cc  patest.c
audio/: thrift.raw
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
sourdough/: Makefile  Makefile.in  config.h  config.h.in~  config.status  configure
sourdough/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
sourdough/examples/: Makefile  Makefile.in  tcpclient  tcpserver
sourdough/examples/.deps/: tcpclient.Po  tcpserver.Po
sourdough/src/: Makefile  Makefile.in
sourdough/src/.deps/: address.Po  file_descriptor.Po  poller.Po  socket.Po
